----------
2006-01-??

	ken:
		* Fixed Mac aMule showing erroneous version number in Get Info.
		* Disabled the HTTP download progress dialog on Mac (again) because
		  it causes crashes.
		* Suppressed an error dialog on failure to lookup the host's domain
		  name.  Demoted it to just a message in the log.

	Phoenix:
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets code.

	Radek:
		* Fixed amulemd output not being printed immediatly when running in a
		  mingw terminal.
		* Added missing include to GetTickCount.h, which caused the function
		  declaration to be missing in some cases.

	Xaignar:
		* Fixed a problem with shared files, where danling pointers to client
		  objects could be left in some cases.
		* Changed the way MD4 hashes are converted from Base16, in order to
		  improve error-checking. This adds aditional safety to places such as
		  parsing of ED2K links and adding of friends.
		* Fixed bug where clients would be removed from the list of Kademlia
		  clients if the hash, ID or IP changed. This should only happen when
		  the client is deleted.
		* Fixed various problems with logging during startup, including a 
		  crash in amuled if an alert was to be displayed.
		* Fixed the HTTPDownload dialog by using events rather than relying
		  on being able to pause the main loop when sending notifications.
		  Also properly aMulified the dialog.
		* Entries for debug-logging are now always saved to the amule.conf
		  file, to allow amuled users to enable these manually. Before, the
		  entries were only written for enabled debuglog-types.
		* Fixed problem in loading of known.met, which would result in
		  duplicate shared files alternating between which file was actually
		  shared. This resulted in statistics for the file being 'lost'.
		* Added locking to the ed2k utility, to prevent races when many links
		  added at once.
		* Changed the way CFile retrieves the file-length, which was causing
		  problems with files shared from a remote drive. 